// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cards Components renders AreaAboutMe properly 1`] = `
<div
  class="h-[453px] w-[1055px] lg:w-[840px] rounded-[8px] p-[24px] bg-[#1f1f21] flex flex-row md:flex-col md:h-[993px] md:w-[328px] md:p-[16px] sm:flex-col sm:h-[993px] sm:w-[300px] sm:p-[16px]"
>
  Teste
</div>
`;

exports[`Cards Components renders AreaTextAboutMe properly 1`] = `
<div
  class="h-[333px] sm:w-auto md:w-auto w-[400px] my-5 xl:pl-5 lg:pl-5"
>
  Teste
</div>
`;

exports[`Cards Components renders Cards properly 1`] = `
<div
  class="h-[300px] w-[330px] rounded-[8px] py-[10px] px-[24px] bg-[#1f1f21] lg:mx-2 xl:mx-4 sm:mb-[10px] sm:w-[300px] sm:h-[200px] mb-2 lg:w-[270px] lg:h-[210px]"
>
  Teste
</div>
`;

exports[`Cards Components renders ContainerCards properly 1`] = `
<div
  class="flex flex-row justify-center pb-[10px] pt-2 sm:py-0 md:py-0 items-center sm:flex-col md:flex-col"
>
  Teste
</div>
`;
